<resources>
    <string name="app_name">sdl.Frashcard</string>
    <string name="action_settings">Settings</string>

    <!--  Strings used for fragments for main page  -->
    <string name="main_create_new_card">Create New Card</string>
    <string name="main_test_card">Test Card</string>

    <!--  Strings used for fragments for create page  -->
<!--    <string name="create_title">Create New Card</string>-->
    <string name="create_front_text">Input Front Text</string>
    <string name="create_hint_front_input">input front text</string>
    <string name="create_back_text">Input Back Text</string>
    <string name="create_hint_back_input_true">input TRUE back text</string>
    <string name="create_hint_back_input_false">input FALSE back text</string>
    <string name="create_save_button">SAVE</string>

    <!--  Strings used for fragments for main test page  -->
    <string name="test_front">Hide Front Text</string>
    <string name="test_back">Hide Back text</string>
    <string name="test_back_from_choice">Hide Back Text (Choice)</string>
    <string name="test_with_friend">Hide Back text (With Friend)</string>

    <!--  Strings used for fragments for test page  -->
    <string name="test_answer_button">Check Answer</string>
    <string name="test_next_button">Next Card</string>
    <string name="test_finish_button">Finish Testing</string>

    <!--  Strings used for fragments for test with friend home page  -->
    <string name="test_with_friend_home_connect">Connect Other Device</string>
    <string name="test_with_friend_home_accept">Accept Connection</string>

    <string name="toast_bluetooth_not_supported">This device does not support Bluetooth</string>
    <string name="toast_bluetooth_disabled">Bluetooth should be enabled</string>
    <string name="toast_scanning_requires_permission">Scanning requires permission %s</string>
    <string name="toast_connection_failed">Connection failed</string>
    <string name="toast_connection_closed">Connection closed</string>
    <string name="toast_empty_message">Empty message</string>

    <!--  Strings used for fragments for scanning page  -->
    <string name="format_dev_name">%1$s %2$s</string>
    <string name="scan_status_stopped">Select a device you want to connect to</string>
    <string name="scan_status_scanning">Scanning in progress</string>
    <string name="alert_connection_confirmation">Do you really want to connect to this device?</string>

    <!--  Strings used for menu for scanning page  -->
    <string name="menu_scan_scan">Scan</string>
    <string name="menu_scan_stop">Stop</string>

    <!--  Strings used for menu for test with friend page  -->
    <string name="test_choice_friend_finish_text">Friend has finished test</string>
    <string name="test_choice_friend_receiver_wait">Wait for friend\'s action</string>

    <!--  Toast for acceleration sensor.  -->
    <string name="toast_no_sensor_manager">No sensor manager</string>
    <string name="toast_no_sensor_available">No sensor available: %s</string>




    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>