<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".test.TestMainActivity">

    <Button
        android:id="@+id/test_front"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_front"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/test_back"/>


    <Button
        android:id="@+id/test_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/test_front"
        app:layout_constraintBottom_toTopOf="@+id/test_back_from_choice"/>

    <Button
        android:id="@+id/test_back_from_choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_back_from_choice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/test_back"
        app:layout_constraintBottom_toTopOf="@+id/test_with_friend"/>

    <Button
        android:id="@+id/test_with_friend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_with_friend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/test_back_from_choice"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>